--- a/publication.html
+++ b/publication.html
@@ -49,6 +49,41 @@
 </head>
    <link href="css/style.css" rel="stylesheet">
 <body>
+    <nav id="navbar_top" class="navbar navbar-expand-md bg-dark navbar-dark shadow">
+    <div class="container">
+      <a href="index.html" class="navbar-brand align-self-center">
+        <img src="assets/img/droplet.png" class="rounded-circle" height="40">
+        AMQI
+      </a>
+
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navmenu">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item active">
+            <a href="index.html" class="nav-link">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="group.html" class="nav-link">Group Members</a>
+          </li>
+          <li class="nav-item">
+            <a href="publication.html" class="nav-link">Publications</a>
+          </li>
+          <li class="nav-item">
+            <a href="Talk.html" class="nav-link">Talks</a>
+          </li>
+          <li class="nav-item">
+            <a href="gallery.html" class="nav-link">Gallery</a>
+          </li>
+          <li class="nav-item">
+            <a href="http://10.33.1.110/nextcloud" class="nav-link">Cloud</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
     <header>
         <h1>Publications</h1>
     </header>
