--- a/publication.html
+++ b/publication.html
@@ -15,7 +15,7 @@
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 
-    <link href="css/style.css" rel="stylesheet">
+<!--     <link href="css/style.css" rel="stylesheet"> -->
     <style>
         body {
             font-family: Arial, sans-serif;
