--- a/publication.html
+++ b/publication.html
@@ -32,16 +32,13 @@
         .year {
             font-size: 25px;
             margin-top: 20px;
-            text-align: center;
         }
         .publication {
             border: 1px solid #ccc;
             background-color: white;
             padding: 15px;
             margin-bottom: 10px;
-        }
-        .publication .title, .publication .authors, .publication .details, .publication .doi {
-            text-align: left;
+            text-align: left; /* Ensures all text is left-aligned */
         }
         .title {
             font-size: 19px;
