--- a/publication.html
+++ b/publication.html
@@ -108,9 +108,25 @@
       </div>
     </div>
   </nav>
-    <header>
+
+    <div style="height: 50px;"></div>
+      <section class="p-5 bg-intro" id="intro">
+        <div class="container">
+          <div class="h1 text-light text-center">
+            Atomic, Molecular & Quantum Information Group
+          </div>
+          <p class="h5 text-center text-light">
+            Department of Physics, Indian Institute of Technology Kharagpur
+          </p>
+            <div style="height: 20px;"></div>
+          <p class="h1 text-center text-light">
+            Group Members
+          </p>
+        </div>
+      </section>
+<!--     <header>
         <h1>Publications</h1>
-    </header>
+    </header> -->
      <div class="container">
      <!-- Year 2024 -->
     <div class="year">2024</div>
