--- a/publication.html
+++ b/publication.html
@@ -109,7 +109,7 @@
     </div>
   </nav>
 
-    <div style="height: 50px;"></div>
+<!--     <div style="height: 50px;"></div> -->
       <section class="p-5 bg-intro" id="intro">
         <div class="container">
           <div class="h1 text-light text-center">
@@ -120,7 +120,7 @@
           </p>
             <div style="height: 20px;"></div>
           <p class="h1 text-center text-light">
-            Group Members
+            Publications
           </p>
         </div>
       </section>
