--- a/publication.html
+++ b/publication.html
@@ -109,7 +109,7 @@
     </div>
   </nav>
 
-<!--     <div style="height: 50px;"></div> -->
+    <div style="height: -10px;"></div>
       <section class="p-5 bg-intro" id="intro">
         <div class="container">
           <div class="h1 text-light text-center">
