--- a/publication.html
+++ b/publication.html
@@ -33,7 +33,7 @@
             font-family: Arial, sans-serif;
             background-color: #e0dcdc;
             margin: 0;
-            padding: 10px;
+/*             padding: 10px; */
         }
         header {
             background-color: #333;
@@ -109,7 +109,7 @@
     </div>
   </nav>
 
-    <div style="height: -10px;"></div>
+    <div style="height: -20px;"></div>
       <section class="p-5 bg-intro" id="intro">
         <div class="container">
           <div class="h1 text-light text-center">
