--- a/publication.html
+++ b/publication.html
@@ -35,12 +35,12 @@
             margin: 0;
 /*             padding: 10px; */
         }
-        header {
+/*         header {
             background-color: #333;
             color: white;
             text-align: center;
             padding: 1em;
-        }
+        } */
         .year {
             font-size: 25px;
             margin-top: 20px;
