--- a/Talk.html
+++ b/Talk.html
@@ -27,6 +27,59 @@
 
     <title>Video Lectures</title>
 </head>
+      <link href="css/style.css" rel="stylesheet">
+<body>
+    <nav id="navbar_top" class="navbar navbar-expand-md bg-dark navbar-dark shadow">
+    <div class="container">
+      <a href="index.html" class="navbar-brand align-self-center">
+        <img src="assets/img/droplet.png" class="rounded-circle" height="40">
+        AMQI
+      </a>
+
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navmenu">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item active">
+            <a href="index.html" class="nav-link">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="group.html" class="nav-link">Group Members</a>
+          </li>
+          <li class="nav-item">
+            <a href="publication.html" class="nav-link">Publications</a>
+          </li>
+          <li class="nav-item">
+            <a href="Talk.html" class="nav-link">Talks</a>
+          </li>
+          <li class="nav-item">
+            <a href="gallery.html" class="nav-link">Gallery</a>
+          </li>
+          <li class="nav-item">
+            <a href="http://10.33.1.110/nextcloud" class="nav-link">Cloud</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+    <div style="height: -20px;"></div>
+      <section class="p-5 bg-intro" id="intro">
+        <div class="container">
+          <div class="h1 text-light text-center">
+            Atomic, Molecular & Quantum Information Group
+          </div>
+          <p class="h5 text-center text-light">
+            Department of Physics, Indian Institute of Technology Kharagpur
+          </p>
+            <div style="height: 20px;"></div>
+          <p class="h1 text-center text-light">
+            Publications
+          </p>
+        </div>
+      </section>
 <body>
     <h1>Talks</h1>
     
