--- a/Talk.html
+++ b/Talk.html
@@ -78,11 +78,10 @@
           </p>
             <div style="height: 20px;"></div>
           <p class="h1 text-center text-light">
-            Publications
+            Talks
           </p>
         </div>
       </section>
-    <h1>Talks</h1>
     
     <h2>PHYSICS WITH TRAPPED ATOMS, MOLECULES AND IONS</h2>
     <a href="https://www.youtube.com/watch?v=Fj5AYFDC6Lk" target="_blank">
