--- a/Talk.html
+++ b/Talk.html
@@ -26,6 +26,14 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 
     <title>Video Lectures</title>
+        <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #e0dcdc;
+            margin: 0;
+/*             padding: 10px; */
+        }
+            </style>
 </head>
      
 <body>
