--- a/Talk.html
+++ b/Talk.html
@@ -31,7 +31,7 @@
             font-family: Arial, sans-serif;
             background-color: #e0dcdc;
             margin: 1;
-/*             padding: 10px; */
+            padding: 5px;
         }
             </style>
 </head>
