--- a/Talk.html
+++ b/Talk.html
@@ -28,10 +28,10 @@
     <title>Video Lectures</title>
         <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: Arial;
             background-color: #e0dcdc;
             margin: 1;
-            padding: 5px;
+            padding: 6px;
         }
             </style>
 </head>
@@ -90,7 +90,7 @@
           </p>
         </div>
       </section>
-    <div style="height: 10px;"></div>
+    <div style="height: 20px;"></div>
     <h3>PHYSICS WITH TRAPPED ATOMS, MOLECULES AND IONS</h3>
     <a href="https://www.youtube.com/watch?v=Fj5AYFDC6Lk" target="_blank">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/Fj5AYFDC6Lk" frameborder="0" allowfullscreen></iframe>
@@ -100,7 +100,7 @@
         <strong>Date:</strong> May 12, 2022
     </p>
 
-    <div style="height: 10px;"></div>
+    <div style="height: 20px;"></div>
     <h3>QIQT 23</h3>
     <a href="https://www.youtube.com/watch?v=LwYFjAra3b0" target="_blank">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/LwYFjAra3b0" frameborder="0" allowfullscreen></iframe>
