--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
   </section>
 
   <section class="p-2 bg-intro-topics">
+    <div class="h1 text-center text-dark p-3">Recent Updates</div>
     <div class="container pt-5">
       <div id="recenthl" class="carousel slide" data-bs-ride="carousel">
         <ol class="carousel-indicators">
