--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   </section>
 
   <section class="p-2 bg-intro-topics">
-    <div class="h1 text-center text-dark p-3">Recent Updates</div>
+    <div class="h2 text-center text-dark p-3">Recent Updates</div>
     <div class="container pt-5">
       <div id="recenthl" class="carousel slide" data-bs-ride="carousel">
         <ol class="carousel-indicators">
@@ -139,6 +139,7 @@
   <section class="p-2 bg-intro-topics">
 <!--     <div class="container"style="background-color: #f0f0f0;"> -->
     <div class="container">
+      <div class="h2 text-center text-dark p-3">Research</div>
       <div class="row">
         <div class="col-sm-12 col-md-6 col-lg-4 text-center pt-3 px-2">
           <h3 class="text-dark">Ultracold Atom</h3>
