--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     </div>
   </section>
 
-  <section class="p-2 bg-intro-topics">
+  <section class="container-fluid bg-present">
 <!--     <div class="container"style="background-color: #f0f0f0;"> -->
     <div class="container">
       <div class="h2 text-center text-dark p-3">Research</div>
