--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
         </a>
       </div>
     </div>
+     <div style="height: 20px;"></div>
   </section>
 
   <section class="container-fluid bg-present">
