--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <div class="col-sm-12 col-md-6 col-lg-4 text-center pt-3 px-2">
           <h3 class="text-dark">Ultracold Atom</h3>
           <!-- <img src="recents/Physics.png" class="rounded-circle img-fluid w-25" alt="..."> -->
-          <p class="text-light p-2 topics-info mt-1"style="background-color: #ffffff; padding: 80px; border-radius: 12px;">Bose-Einstein condensates (BEC), Dipolar BEC, Quantum Droplets and
+          <p class="text-light p-2 topics-info mt-1"style="background-color: #ffffff; padding: 40px; border-radius: 12px;">Bose-Einstein condensates (BEC), Dipolar BEC, Quantum Droplets and
             Supersolids,
             Multicomponent BEC, Spinor BEC, Instability & Quantum Turbulence</p>
         </div>
@@ -153,19 +153,19 @@
         <div class="col-sm-12 col-md-6 col-lg-4 text-center pt-3 px-2">
           <h3 class="text-dark">Quantum Foundations</h3>
           <!-- <img src="recents/Physics.png" class="rounded-circle img-fluid w-25" alt="..."> -->
-          <p class="text-dark p-2 topics-info mt-1"style="background-color: #ffffff; padding: 80px; border-radius: 12px;">Nonlinear quantum theory, Quantum Ontology, Quantum Information,
+          <p class="text-light p-2 topics-info mt-1"style="background-color: #ffffff; padding: 40px; border-radius: 12px;">Nonlinear quantum theory, Quantum Ontology, Quantum Information,
             Quantum
             Thermodynamics</p>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4 text-center pt-3 px-2">
           <h3 class="text-dark">Atomic Physics</h3>
           <!-- <img src="recents/Physics.png" class="rounded-circle img-fluid w-25" alt="..."> -->
-          <p class="text-dark  p-2 topics-info"style="background-color: #ffffff; padding: 80px; border-radius: 12px;">Relativistic Many-electron theory</p>
+          <p class="text-light  p-2 topics-info"style="background-color: #ffffff; padding: 40px; border-radius: 12px;">Relativistic Many-electron theory</p>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4 text-center pt-3 px-2">
           <h3 class="text-dark">Strongly Correlated and Topological Phases</h3>
           <!-- <img src="recents/Physics.png" class="rounded-circle img-fluid w-25" alt="..."> -->
-          <p class="text-dark p-2 topics-info mt-1"style="background-color: #ffffff; padding: 80px; border-radius: 12px;">Topological phases of simple lattice models, Topological
+          <p class="text-light p-2 topics-info mt-1"style="background-color: #ffffff; padding: 40px; border-radius: 12px;">Topological phases of simple lattice models, Topological
             non-equilibrium dynamics, Non
             Hermitian PT-symmetry, First principal calculation in strongly
             correlated system</p>
@@ -173,12 +173,12 @@
         <div class="col-sm-12 col-md-6 col-lg-4 text-center pt-3 px-2">
           <h3 class="text-dark">Quantum Algorithm</h3>
           <!-- <img src="recents/Physics.png" class="rounded-circle img-fluid w-25" alt="..."> -->
-          <p class="text-dark p-2 topics-info mt-1"style="background-color: #ffffff; padding: 80px; border-radius: 12px;">Quantum Algorithm</p>
+          <p class="text-light p-2 topics-info mt-1"style="background-color: #ffffff; padding: 40px; border-radius: 12px;">Quantum Algorithm</p>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4 text-center pt-3 px-2">
           <h3 class="text-dark">High Energy & Astrophysics</h3>
           <!-- <img src="recents/Physics.png" class="rounded-circle img-fluid w-25" alt="..."> -->
-          <p class="text-dark p-2 topics-info mt-1"style="background-color: #ffffff; padding: 80px; border-radius: 12px;">VHE Gamma-ray Astronomy, Gamma Ray burst (GRB) modeling, Neutrino
+          <p class="text-light p-2 topics-info mt-1"style="background-color: #ffffff; padding: 40px; border-radius: 12px;">VHE Gamma-ray Astronomy, Gamma Ray burst (GRB) modeling, Neutrino
             oscillation, Deep
             learning techniques of event selection and reconstruction </p>
         </div>
