--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <div class="col-sm-12 col-md-6 col-lg-4 text-center pt-3 px-2">
           <h3 class="text-dark">Ultracold Atom</h3>
           <!-- <img src="recents/Physics.png" class="rounded-circle img-fluid w-25" alt="..."> -->
-          <p class="text-light p-2 topics-info mt-1>Bose-Einstein condensates (BEC), Dipolar BEC, Quantum Droplets and
+          <p class="text-light p-2 topics-info mt-1">Bose-Einstein condensates (BEC), Dipolar BEC, Quantum Droplets and
             Supersolids,
             Multicomponent BEC, Spinor BEC, Instability & Quantum Turbulence</p>
         </div>
