--- a/index.html
+++ b/index.html
@@ -138,14 +138,14 @@
   </section>
 
   <section class="container-fluid bg-present">
-    <!-- <div class="container"style="background-color: #f0f0f0;"> -->
-    <div class="container pt-4">
+<!--     <div class="container"style="background-color: #f0f0f0;"> -->
+    <div class="container pt-3">
       <div class="h1 text-center text-dark p-3">Research</div>
       <div class="row">
         <div class="col-sm-12 col-md-6 col-lg-4 text-center pt-3 px-2">
           <h3 class="text-dark">Ultracold Atom</h3>
           <!-- <img src="recents/Physics.png" class="rounded-circle img-fluid w-25" alt="..."> -->
-          <p class="text-light p-2 topics-info mt-1" style="background-color: #ffffff; padding: 4px; border-radius: 12px;">Bose-Einstein condensates (BEC), Dipolar BEC, Quantum Droplets and
+          <p class="text-light p-2 topics-info mt-1">Bose-Einstein condensates (BEC), Dipolar BEC, Quantum Droplets and
             Supersolids,
             Multicomponent BEC, Spinor BEC, Instability & Quantum Turbulence</p>
         </div>
@@ -153,19 +153,19 @@
         <div class="col-sm-12 col-md-6 col-lg-4 text-center pt-3 px-2">
           <h3 class="text-dark">Quantum Foundations</h3>
           <!-- <img src="recents/Physics.png" class="rounded-circle img-fluid w-25" alt="..."> -->
-          <p class="text-light p-2 topics-info mt-1" style="background-color: #ffffff; padding: 4px; border-radius: 12px;">Nonlinear quantum theory, Quantum Ontology, Quantum Information,
+          <p class="text-light p-2 topics-info mt-1">Nonlinear quantum theory, Quantum Ontology, Quantum Information,
             Quantum
             Thermodynamics</p>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4 text-center pt-3 px-2">
           <h3 class="text-dark">Atomic Physics</h3>
           <!-- <img src="recents/Physics.png" class="rounded-circle img-fluid w-25" alt="..."> -->
-          <p class="text-light p-2 topics-info" style="background-color: #ffffff; padding: 4px; border-radius: 12px;">Relativistic Many-electron theory</p>
+          <p class="text-light  p-2 topics-info">Relativistic Many-electron theory</p>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4 text-center pt-3 px-2">
           <h3 class="text-dark">Strongly Correlated and Topological Phases</h3>
           <!-- <img src="recents/Physics.png" class="rounded-circle img-fluid w-25" alt="..."> -->
-          <p class="text-light p-2 topics-info mt-1" style="background-color: #ffffff; padding: 4px; border-radius: 12px;">Topological phases of simple lattice models, Topological
+          <p class="text-light p-2 topics-info mt-1">Topological phases of simple lattice models, Topological
             non-equilibrium dynamics, Non
             Hermitian PT-symmetry, First principal calculation in strongly
             correlated system</p>
@@ -173,12 +173,12 @@
         <div class="col-sm-12 col-md-6 col-lg-4 text-center pt-3 px-2">
           <h3 class="text-dark">Quantum Algorithm</h3>
           <!-- <img src="recents/Physics.png" class="rounded-circle img-fluid w-25" alt="..."> -->
-          <p class="text-light p-2 topics-info mt-1" style="background-color: #ffffff; padding: 4px; border-radius: 12px;">Quantum Algorithm</p>
+          <p class="text-light p-2 topics-info mt-1">Quantum Algorithm</p>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4 text-center pt-3 px-2">
           <h3 class="text-dark">High Energy & Astrophysics</h3>
           <!-- <img src="recents/Physics.png" class="rounded-circle img-fluid w-25" alt="..."> -->
-          <p class="text-light p-2 topics-info mt-1" style="background-color: #ffffff; padding: 4px; border-radius: 12px;">VHE Gamma-ray Astronomy, Gamma Ray burst (GRB) modeling, Neutrino
+          <p class="text-light p-2 topics-info mt-1">VHE Gamma-ray Astronomy, Gamma Ray burst (GRB) modeling, Neutrino
             oscillation, Deep
             learning techniques of event selection and reconstruction </p>
         </div>
@@ -186,11 +186,14 @@
     </div>
   </section>
 
+
+
   <footer class="bg-dark text-light pt-2">
     <div class="container">
       <div class="row">
         <div class="col-md-4">
           <div class="text-center">
+
             <h5>Contact Us</h5>
             <p>Email: smlab.phy@gmail.com<br>
               Phone: 83808</p>
@@ -198,6 +201,7 @@
         </div>
         <div class="col-md-4">
           <div class="text-center">
+
             <div class="copyright">
               <strong><span>Atoms, Molecules & Quantum Information Group</span></strong>
             </div>
@@ -217,6 +221,7 @@
               IIT Kharagpur</p>
           </div>
         </div>
+
         <!-- <div class="col-md-4">
           <h5>Map</h5>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d230.6814503274609!2d87.31093432894353!3d22.319500197661732!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a1d4404c5c2d88d%3A0x200987d62ee24538!2sDepartment%20Of%20Physics!5e0!3m2!1sen!2sin!4v1678198616089!5m2!1sen!2sin" width="150" height="150" frameborder="0" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
@@ -224,8 +229,11 @@
       </div>
       <hr> -->
       </div>
-    </div>
+
   </footer>
+
+
+
 </body>
 
 </html>
