--- a/group.html
+++ b/group.html
@@ -51,20 +51,15 @@
                     <li class="nav-item active">
                     <a href="index.html" class="nav-link">Home</a>
                   </li>
-<!--                     <li class="nav-item">
-                        <a href="#groupHead" class="nav-link">Group Head</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#presentMembers" class="nav-link">Present Members</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#formerMembers" class="nav-link">Former Members</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#projectStudents" class="nav-link">Project Studuents</a>
-                    </li> -->
-                    <li class="nav-item">
-                    <a href="group.html" class="nav-link">Group Members</a>
+                  <li class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" id="groupMembersDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Group Members
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="groupMembersDropdown">
+                      <li><a class="dropdown-item" href="#groupHead">Group Head</a></li>
+                      <li><a class="dropdown-item" href="#presentMembers">Present Members</a></li>
+                      <li><a class="dropdown-item" href="#formerMembers">Former Members</a></li>
+                    </ul>
                   </li>
                   <li class="nav-item">
                     <a href="publication.html" class="nav-link">Publications</a>
