--- a/publication.html
+++ b/publication.html
@@ -131,6 +131,27 @@
      <!-- Year 2024 -->
     <div class="year">2024</div>
 
+     <div class="publication">
+        <div class="title">Sinusoidal-magnetic-field-induced topological excitations in a spin-orbit-coupled spinor condensate</div>
+        <div class="authors">Arpana Saboo, Soumyadeep Halder, Subrata Das, Sonjoy Majumder</div>
+        <div class="details">Physical Review A</div> 
+        <div><a class="doi" href="https://doi.org/10.1103/PhysRevA.110.033325">DOI: 10.1103/PhysRevA.110.033325</a></div>
+    </div>
+
+    <div class="publication">
+        <div class="title">Induced supersolidity and hypersonic flow of a dipolar Bose-Einstein condensate in a rotating bubble trap</div>
+        <div class="authors">Hari Sadhan Ghosh, Soumyadeep Halder, Subrata Das, Sonjoy Majumder</div>
+        <div class="details">Physical Review A</div> 
+        <div><a class="doi" href="https://doi.org/10.1103/PhysRevA.110.033322">DOI: 10.1103/PhysRevA.110.033322</a></div>
+    </div>
+
+    <div class="publication">
+        <div class="title">Roadmap to vortex nucleation below critical rotation frequency in a dipolar Bose-Einstein condensate</div>
+        <div class="authors">Soumyadeep Halder, Hari Sadhan Ghosh, Arpana Saboo, Andy M Martin, Sonjoy Majumder</div>
+        <div class="details">Arxiv</div> 
+        <div><a class="doi" href="https://doi.org/10.48550/arXiv.2409.00251">DOI: arXiv:2409.00251</a></div>
+    </div>
+
     <div class="publication">
         <div class="title">Hückel Molecular Orbital Theory on a Quantum Computer: A Scalable System-Agnostic Variational Implementation with Compact Encoding</div>
         <div class="authors">Harshdeep Singh, Sonjoy Majumder, Sabyashachi Mishra</div>
