--- a/publication.html
+++ b/publication.html
@@ -151,6 +151,18 @@
         <div class="details">Arxiv</div> 
         <div><a class="doi" href="https://doi.org/10.48550/arXiv.2409.00251">DOI: arXiv:2409.00251</a></div>
     </div>
+     <div class="publication">
+        <div class="title">SHARC-VQE: Simplified Hamiltonian Approach with Refinement and Correction enabled Variational Quantum Eigensolver for Molecular Simulation</div>
+        <div class="authors">Harshdeep Singh, Sonjoy Majumder, Sabyashachi Mishra</div>
+        <div class="details">Arxiv</div> 
+        <div><a class="doi" href="https://doi.org/10.48550/arXiv.2407.12305">DOI: arXiv:2407.12305</a></div>
+    </div>
+    <div class="publication">
+        <div class="title">Induced supersolidity in a Dy-Er mixture </div>
+        <div class="authors">Soumyadeep Halder, Subrata Das, Sonjoy Majumder</div>
+        <div class="details">Physical Review A</div>
+        <div><a class="doi" href="https://doi.org/10.1103/PhysRevA.109.063321">DOI: 10.1103/PhysRevA.109.063321</a></div>
+    </div>
 
     <div class="publication">
         <div class="title">Hückel Molecular Orbital Theory on a Quantum Computer: A Scalable System-Agnostic Variational Implementation with Compact Encoding</div>
@@ -158,16 +170,15 @@
         <div class="details">The Journal of Chemical Physics</div> 
         <div><a class="doi" href="https://doi.org/10.1063/5.0210597">DOI: 10.1063/5.0210597</a></div>
     </div>
+    <div class="publication">
+        <div class="title">Spin-Orbit Coupled Rotating Spin-1 Bose-Einstein Condensates Under the Influence of External Magnetic Field</div>
+        <div class="authors">Arpana Saboo, Subrata Das, Soumyadeep Halder, Sonjoy Majumder</div>
+        <div class="details">Springer Nature Switzerland (Proceedings of the 2nd International Conference on Nonlinear Dynamics and Applications)</div> 
+        <div><a class="doi" href="https://doi.org/10.1007/978-3-031-66874-6_25">DOI: 10.1007/978-3-031-66874-6_25</a></div>
+    </div>
 
     <!-- Year 2023 -->
     <div class="year">2023</div>
-
-    <div class="publication">
-        <div class="title">Induced supersolidity in a Dy-Er mixture </div>
-        <div class="authors">Soumyadeep Halder, Subrata Das, Sonjoy Majumder</div>
-        <div class="details">Arxiv</div>
-        <div><a class="doi" href="https://doi.org/10.48550/arXiv.2309.16799">DOI: arXiv:2309.16799</a></div>
-    </div>
          
     <div class="publication">
         <div class="title">On The Study Of Partial Qubit Hamiltonian For Efficient Molecular Simulation Using Variational Quantum Eigensolvers </div>
