--- a/publication.html
+++ b/publication.html
@@ -128,6 +128,22 @@
         <h1>Publications</h1>
     </header> -->
      <div class="container">
+         <!-- Year 2025 -->
+    <div class="year">2025</div>
+
+    <div class="publication">
+        <div class="title">Roadmap to vortex nucleation below critical rotation frequency in a dipolar Bose-Einstein condensate</div>
+        <div class="authors">Soumyadeep Halder, Hari Sadhan Ghosh, Arpana Saboo, Andy M Martin, Sonjoy Majumder</div>
+        <div class="details">Physical Review A</div> 
+        <div><a class="doi" href="https://doi.org/10.1103/PhysRevA.111.023301">DOI: PhysRevA.111.023301</a></div>
+        </div>
+
+    <div class="publication">
+        <div class="title">Dissipation in fermionic two-body continuous-time quantum walk under the steepest entropy ascent formalism</div>
+        <div class="authors">Rohit Kishan Ray, R Srikanth, Sonjoy Majumder</div>
+        <div class="details">Arxiv</div> 
+        <div><a class="doi" href="https://doi.org/10.48550/arXiv.2501.18489">DOI: arXiv:2501.18489 </a></div>
+    </div>
      <!-- Year 2024 -->
     <div class="year">2024</div>
 
