--- a/publication.html
+++ b/publication.html
@@ -132,6 +132,13 @@
     <div class="year">2025</div>
 
     <div class="publication">
+        <div class="title">Scalable quantum circuit simulation of a chaotic Ising chain</div>
+        <div class="authors">Sabyasachi Chakraborty, Rohit Sarma Sarkar, Sonjoy Majumder</div>
+        <div class="details">Arxiv</div> 
+        <div><a class="doi" href="https://doi.org/10.48550/arXiv.2502.17286">DOI: arXiv:2502.17286</a></div>
+        </div>
+
+    <div class="publication">
         <div class="title">Roadmap to vortex nucleation below critical rotation frequency in a dipolar Bose-Einstein condensate</div>
         <div class="authors">Soumyadeep Halder, Hari Sadhan Ghosh, Arpana Saboo, Andy M Martin, Sonjoy Majumder</div>
         <div class="details">Physical Review A</div> 
