--- a/publication.html
+++ b/publication.html
@@ -132,6 +132,13 @@
     <div class="year">2025</div>
 
     <div class="publication">
+        <div class="title">Magnetization induced skyrmion dynamics of a spin–orbit-coupled spinor condensate under sinusoidally varying magnetic field</div>
+        <div class="authors">Arpana Saboo, Soumyadeep Halder, Mithun Thudiyangal, Sonjoy Majumder</div>
+        <div class="details">New Journal of Physics</div> 
+        <div><a class="doi" href="https://iopscience.iop.org/article/10.1088/1367-2630/adcb63">DOI: New J. Phys. 27 043019</a></div>
+        </div>
+
+    <div class="publication">
         <div class="title">Scalable quantum circuit simulation of a chaotic Ising chain</div>
         <div class="authors">Sabyasachi Chakraborty, Rohit Sarma Sarkar, Sonjoy Majumder</div>
         <div class="details">Arxiv</div> 
