--- a/publication.html
+++ b/publication.html
@@ -139,6 +139,13 @@
         </div>
 
     <div class="publication">
+        <div class="title">Blockwise Optimization for Projective Variational Quantum Dynamics (BLOP-VQD): Algorithm and Implementation for Lattice Systems</div>
+        <div class="authors">Harshdeep Singh, Sonjoy Majumder, Sabyashachi Mishra</div>
+        <div class="details">Arxiv</div> 
+        <div><a class="doi" href="https://doi.org/10.48550/arXiv.2503.18279">DOI: arXiv:2503.18279</a></div>
+        </div>
+
+    <div class="publication">
         <div class="title">Scalable quantum circuit simulation of a chaotic Ising chain</div>
         <div class="authors">Sabyasachi Chakraborty, Rohit Sarma Sarkar, Sonjoy Majumder</div>
         <div class="details">Arxiv</div> 
@@ -151,6 +158,12 @@
         <div class="details">Physical Review A</div> 
         <div><a class="doi" href="https://doi.org/10.1103/PhysRevA.111.023301">DOI: PhysRevA.111.023301</a></div>
         </div>
+    <div class="publication">
+        <div class="title">SHARC-VQE: Simplified Hamiltonian approach with refinement and correction enabled variational quantum eigensolver for molecular simulation</div>
+        <div class="authors">Harshdeep Singh, Sonjoy Majumder, Sabyashachi Mishra</div>
+        <div class="details">Journal of Chemical Physics</div> 
+        <div><a class="doi" href="https://doi.org/10.1063/5.0249447">DOI: J. Chem. Phys. 162, 114117</a></div>
+    </div>
 
     <div class="publication">
         <div class="title">Dissipation in fermionic two-body continuous-time quantum walk under the steepest entropy ascent formalism</div>
@@ -181,12 +194,7 @@
         <div class="details">Arxiv</div> 
         <div><a class="doi" href="https://doi.org/10.48550/arXiv.2409.00251">DOI: arXiv:2409.00251</a></div>
     </div>
-     <div class="publication">
-        <div class="title">SHARC-VQE: Simplified Hamiltonian Approach with Refinement and Correction enabled Variational Quantum Eigensolver for Molecular Simulation</div>
-        <div class="authors">Harshdeep Singh, Sonjoy Majumder, Sabyashachi Mishra</div>
-        <div class="details">Arxiv</div> 
-        <div><a class="doi" href="https://doi.org/10.48550/arXiv.2407.12305">DOI: arXiv:2407.12305</a></div>
-    </div>
+     
     <div class="publication">
         <div class="title">Induced supersolidity in a Dy-Er mixture </div>
         <div class="authors">Soumyadeep Halder, Subrata Das, Sonjoy Majumder</div>
