--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
           <li data-bs-target="#recenthl" data-bs-slide-to="7"></li>
           <li data-bs-target="#recenthl" data-bs-slide-to="8"></li>
           <li data-bs-target="#recenthl" data-bs-slide-to="9"></li>
+          <li data-bs-target="#recenthl" data-bs-slide-to="10"></li>
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -112,28 +113,31 @@
             <img src="recents/S.Halder_2025_PRA_Roadmap_to_vortex_nucleation.jpeg" class="d-block img-fluid w-100" alt="Second Slide" />
           </div>
           <div class="carousel-item">
-            <img src="recents/Hari_1.png" class="d-block img-fluid w-100" alt="Third Slide" />
+            <img src="recents/H.Singh_2025_JCP_SHARC-VQE_Simplified_Hamiltonian_approach.jpeg" class="d-block img-fluid w-100" alt="Third Slide" />
           </div>
           <div class="carousel-item">
-            <img src="recents/Arpana_2.png" class="d-block img-fluid w-100" alt="Fourth Slide" />
+            <img src="recents/Hari_1.png" class="d-block img-fluid w-100" alt="Fourth Slide" />
           </div>
           <div class="carousel-item">
-            <img src="recents/Soumya_PRA_2024.jpeg" class="d-block img-fluid w-100" alt="Fifth Slide" />
+            <img src="recents/Arpana_2.png" class="d-block img-fluid w-100" alt="Fifth Slide" />
           </div>
           <div class="carousel-item">
-            <img src="recents/Harshdeep_JCP_2024.png" class="d-block img-fluid w-100" alt="Sixth Slide" />
+            <img src="recents/Soumya_PRA_2024.jpeg" class="d-block img-fluid w-100" alt="Sixth Slide" />
           </div>
           <div class="carousel-item">
-            <img src="recents/A.Ghosh_2023_aug_PRE.png" class="d-block img-fluid w-100" alt="Seventh Slide" />
+            <img src="recents/Harshdeep_JCP_2024.png" class="d-block img-fluid w-100" alt="Seventh Slide" />
           </div>
           <div class="carousel-item">
-            <img src="recents/H.Singh_2023_j.chem.phys.png" class="d-block w-100" alt="Eighth Slide" />
+            <img src="recents/A.Ghosh_2023_aug_PRE.png" class="d-block img-fluid w-100" alt="Eighth Slide" />
           </div>
           <div class="carousel-item">
-            <img src="recents/A.Saboo_2023_july_PRA.png" class="d-block w-100" alt="Ninth Slide" />
+            <img src="recents/H.Singh_2023_j.chem.phys.png" class="d-block w-100" alt="Ninth Slide" />
           </div>
           <div class="carousel-item">
-            <img src="recents/S.Halder_2023_june_PRA.png" class="d-block w-100" alt="Tenth Slide" />
+            <img src="recents/A.Saboo_2023_july_PRA.png" class="d-block w-100" alt="Tenth Slide" />
+          </div>
+          <div class="carousel-item">
+            <img src="recents/S.Halder_2023_june_PRA.png" class="d-block w-100" alt="Eleventh Slide" />
           </div>
         </div>
         <a class="carousel-control-prev" href="#recenthl" role="button" data-bs-slide="prev">
