--- a/index.html
+++ b/index.html
@@ -104,9 +104,13 @@
           <li data-bs-target="#recenthl" data-bs-slide-to="8"></li>
           <li data-bs-target="#recenthl" data-bs-slide-to="9"></li>
           <li data-bs-target="#recenthl" data-bs-slide-to="10"></li>
+          <li data-bs-target="#recenthl" data-bs-slide-to="11"></li>
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
+            <img src="recents/R.k.ray_2025.png" class="d-block img-fluid w-100" alt="zeroth Slide" />
+          </div>
+          <div class="carousel-item">
             <img src="recents/A.Saboo_2025_NJP_Magnetization_induced_skyrmion_dynamics.jpeg" class="d-block img-fluid w-100" alt="First Slide" />
           </div>
           <div class="carousel-item">
