--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="recents/R.k.ray_2025.png" class="d-block img-fluid w-100" alt="zeroth Slide" />
+            <img src="recents/R.K.Ray_2025.png" class="d-block img-fluid w-100" alt="zeroth Slide" />
           </div>
           <div class="carousel-item">
             <img src="recents/A.Saboo_2025_NJP_Magnetization_induced_skyrmion_dynamics.jpeg" class="d-block img-fluid w-100" alt="First Slide" />
