--- a/publication.html
+++ b/publication.html
@@ -279,6 +279,14 @@
         <div><a class="doi" href=" https://doi.org/10.1103/PhysRevResearch.4.043124">DOI: 10.1103/PhysRevResearch.4.043124</a></div>
     </div>
 
+         
+    <div class="publication">
+        <div class="title">Steepest entropy ascent solution for a continuous-time quantum walker</div>
+        <div class="authors"> Rohit Kishan Ray</div>
+        <div class="details">Physical Review E</div> 
+        <div><a class="doi" href="https://doi.org/10.1103/PhysRevE.106.024115">DOI: 10.1103/PhysRevE.106.024115</a></div>
+    </div>
+
     <div class="publication">
         <div class="title">Two-Photon Polarizability of Ba+ Ion: Control of Spin-Mixing Processes in an Ultracold 137Ba+− 87Rb Mixture</div>
         <div class="authors"> Arghya Das, Anal Bhowmik, Narendra Nath Dutta, Sonjoy Majumder</div>
