--- a/publication.html
+++ b/publication.html
@@ -131,6 +131,13 @@
          <!-- Year 2025 -->
     <div class="year">2025</div>
 
+         <div class="publication">
+        <div class="title">Dissipation in fermionic two-body continuous-time quantum walk under the steepest entropy ascent formalism</div>
+        <div class="authors">Rohit Kishan Ray, R. Srikanth, and Sonjoy Majumder</div>
+        <div class="details">Physical Review E (Accepted) </div> 
+        <div><a class="doi" href="https://doi.org/10.48550/arXiv.2501.18489">DOI: arXiv.2501.18489</a></div>
+        </div>
+
     <div class="publication">
         <div class="title">Magnetization induced skyrmion dynamics of a spin–orbit-coupled spinor condensate under sinusoidally varying magnetic field</div>
         <div class="authors">Arpana Saboo, Soumyadeep Halder, Mithun Thudiyangal, Sonjoy Majumder</div>
