--- a/index.html
+++ b/index.html
@@ -26,6 +26,120 @@
     -->
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+
+  <style>
+    /* Fixed aspect ratio container for carousel */
+    .carousel-container {
+      position: relative;
+      width: 100%;
+      padding-bottom: 38%;
+      /* 16:9 aspect ratio */
+      background-color: #f5f5f5;
+      overflow: hidden;
+    }
+
+    .carousel-container .carousel {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+
+    .carousel-container .carousel-inner {
+      height: 100%;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .carousel-container .carousel-item {
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: #f5f5f5;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      opacity: 0;
+      transition: opacity 0.6s ease-in-out;
+    }
+
+    .carousel-container .carousel-item.active {
+      opacity: 1;
+      position: relative;
+    }
+
+    /* Fade transitions */
+    .carousel-container .carousel-item-prev,
+    .carousel-container .carousel-item-next,
+    .carousel-container .carousel-item.active.carousel-item-start,
+    .carousel-container .carousel-item.active.carousel-item-end {
+      opacity: 0;
+    }
+
+    .carousel-container .carousel-item img {
+      max-width: 100%;
+      max-height: 100%;
+      width: auto;
+      height: auto;
+      object-fit: contain;
+    }
+
+    /* Ensure carousel controls are visible and clickable */
+    .carousel-container .carousel-control-prev,
+    .carousel-container .carousel-control-next {
+      z-index: 15;
+      height: 100%;
+      width: 10%;
+      opacity: 0.8;
+    }
+
+    .carousel-container .carousel-control-prev:hover,
+    .carousel-container .carousel-control-next:hover {
+      opacity: 1;
+    }
+
+    /* Style the arrow icons */
+    .carousel-container .carousel-control-prev-icon,
+    .carousel-container .carousel-control-next-icon {
+      width: 3rem;
+      height: 3rem;
+      background-color: rgba(0, 0, 0, 0.6);
+      border-radius: 50%;
+      border: 2px solid rgba(255, 255, 255, 0.9);
+    }
+
+    .carousel-container .carousel-control-prev:hover .carousel-control-prev-icon,
+    .carousel-container .carousel-control-next:hover .carousel-control-next-icon {
+      background-color: rgba(0, 0, 0, 0.8);
+      border-color: #fff;
+    }
+
+    /* Custom styles for carousel indicators */
+    #recenthl .carousel-indicators {
+      bottom: 10px;
+      z-index: 15;
+    }
+
+    #recenthl .carousel-indicators button {
+      width: 12px;
+      height: 12px;
+      border-radius: 50%;
+      background-color: rgba(0, 0, 0, 0.7);
+      border: 2px solid rgba(255, 255, 255, 0.8);
+      margin: 0 5px;
+      cursor: pointer;
+    }
+
+    #recenthl .carousel-indicators button.active {
+      background-color: rgba(0, 0, 0, 0.9);
+      border: 2px solid rgba(255, 255, 255, 1);
+      width: 14px;
+      height: 14px;
+    }
+  </style>
 </head>
 
 <link href="css/style.css" rel="stylesheet">
@@ -91,74 +205,30 @@
   <section class="p-2 bg-intro-topics">
     <div class="h1 text-center text-dark p-3">Recent Updates</div>
     <div class="container pt-4">
-      <div id="recenthl" class="carousel slide" data-bs-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-bs-target="#recenthl" data-bs-slide-to="0" class="active"></li>
-          <li data-bs-target="#recenthl" data-bs-slide-to="1"></li>
-          <li data-bs-target="#recenthl" data-bs-slide-to="2"></li>
-          <li data-bs-target="#recenthl" data-bs-slide-to="3"></li>
-          <li data-bs-target="#recenthl" data-bs-slide-to="4"></li>
-          <li data-bs-target="#recenthl" data-bs-slide-to="5"></li>
-          <li data-bs-target="#recenthl" data-bs-slide-to="6"></li>
-          <li data-bs-target="#recenthl" data-bs-slide-to="7"></li>
-          <li data-bs-target="#recenthl" data-bs-slide-to="8"></li>
-          <li data-bs-target="#recenthl" data-bs-slide-to="9"></li>
-          <li data-bs-target="#recenthl" data-bs-slide-to="10"></li>
-          <li data-bs-target="#recenthl" data-bs-slide-to="11"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="recents/R.K.Ray_2025.png" class="d-block img-fluid w-100" alt="zeroth Slide" />
+      <div class="carousel-container">
+        <div id="recenthl" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators" id="carouselIndicators">
+            <!-- Indicators will be dynamically generated -->
           </div>
-          <div class="carousel-item">
-            <img src="recents/A.Saboo_2025_NJP_Magnetization_induced_skyrmion_dynamics.jpeg" class="d-block img-fluid w-100" alt="First Slide" />
+          <div class="carousel-inner" id="carouselItems">
+            <!-- Carousel items will be dynamically generated -->
           </div>
-          <div class="carousel-item">
-            <img src="recents/S.Halder_2025_PRA_Roadmap_to_vortex_nucleation.jpeg" class="d-block img-fluid w-100" alt="Second Slide" />
-          </div>
-          <div class="carousel-item">
-            <img src="recents/H.Singh_2025_JCP_SHARC-VQE_Simplified_Hamiltonian_approach.jpeg" class="d-block img-fluid w-100" alt="Third Slide" />
-          </div>
-          <div class="carousel-item">
-            <img src="recents/Hari_1.png" class="d-block img-fluid w-100" alt="Fourth Slide" />
-          </div>
-          <div class="carousel-item">
-            <img src="recents/Arpana_2.png" class="d-block img-fluid w-100" alt="Fifth Slide" />
-          </div>
-          <div class="carousel-item">
-            <img src="recents/Soumya_PRA_2024.jpeg" class="d-block img-fluid w-100" alt="Sixth Slide" />
-          </div>
-          <div class="carousel-item">
-            <img src="recents/Harshdeep_JCP_2024.png" class="d-block img-fluid w-100" alt="Seventh Slide" />
-          </div>
-          <div class="carousel-item">
-            <img src="recents/A.Ghosh_2023_aug_PRE.png" class="d-block img-fluid w-100" alt="Eighth Slide" />
-          </div>
-          <div class="carousel-item">
-            <img src="recents/H.Singh_2023_j.chem.phys.png" class="d-block w-100" alt="Ninth Slide" />
-          </div>
-          <div class="carousel-item">
-            <img src="recents/A.Saboo_2023_july_PRA.png" class="d-block w-100" alt="Tenth Slide" />
-          </div>
-          <div class="carousel-item">
-            <img src="recents/S.Halder_2023_june_PRA.png" class="d-block w-100" alt="Eleventh Slide" />
-          </div>
+          <a class="carousel-control-prev" href="#recenthl" role="button" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#recenthl" role="button" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </a>
         </div>
-        <a class="carousel-control-prev" href="#recenthl" role="button" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#recenthl" role="button" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </a>
       </div>
     </div>
     <div style="height: 100px;"></div>
   </section>
 
   <section class="container-fluid bg-present">
-<!--     <div class="container"style="background-color: #f0f0f0;"> -->
+    <!--     <div class="container"style="background-color: #f0f0f0;"> -->
     <div class="container pt-3">
       <div class="h1 text-center text-dark p-3">Research</div>
       <div class="row">
@@ -252,7 +322,91 @@
 
   </footer>
 
+  <script>
+    // Function to load recent images dynamically
+    async function loadRecentImages() {
+      try {
+        // Fetch the images list from JSON file
+        const response = await fetch('recents/images.json');
+        const imageFiles = await response.json();
 
+        if (imageFiles.length === 0) {
+          console.log('No images found in recents/images.json');
+          return;
+        }
+
+        // Group by date
+        const dateGroups = {};
+        imageFiles.forEach(img => {
+          if (!dateGroups[img.date]) {
+            dateGroups[img.date] = [];
+          }
+          dateGroups[img.date].push(img);
+        });
+
+        // Get the last 10 dates
+        const recentDates = Object.keys(dateGroups).slice(0, 10);
+
+        // Generate carousel items
+        const carouselItems = document.getElementById('carouselItems');
+        const carouselIndicators = document.getElementById('carouselIndicators');
+
+        // Clear existing content
+        carouselItems.innerHTML = '';
+        carouselIndicators.innerHTML = '';
+
+        let slideIndex = 0;
+        recentDates.forEach(date => {
+          const images = dateGroups[date];
+          images.forEach(img => {
+            // Create carousel item
+            const item = document.createElement('div');
+            item.className = slideIndex === 0 ? 'carousel-item active' : 'carousel-item';
+            item.innerHTML = `<img src="recents/${img.filename}" alt="${img.name}" />`;
+            carouselItems.appendChild(item);
+
+            // Create indicator (Bootstrap 5 uses button elements)
+            const indicator = document.createElement('button');
+            indicator.type = 'button';
+            indicator.setAttribute('data-bs-target', '#recenthl');
+            indicator.setAttribute('data-bs-slide-to', slideIndex);
+            indicator.setAttribute('aria-label', `Slide ${slideIndex + 1}`);
+            if (slideIndex === 0) {
+              indicator.className = 'active';
+              indicator.setAttribute('aria-current', 'true');
+            }
+            carouselIndicators.appendChild(indicator);
+
+            slideIndex++;
+          });
+        });
+
+        console.log(`Loaded ${slideIndex} images from ${recentDates.length} recent dates`);
+
+        // Reinitialize the carousel to enable functionality
+        const carouselElement = document.getElementById('recenthl');
+        // Dispose of any existing carousel instance
+        const existingCarousel = bootstrap.Carousel.getInstance(carouselElement);
+        if (existingCarousel) {
+          existingCarousel.dispose();
+        }
+        // Create new carousel instance
+        new bootstrap.Carousel(carouselElement, {
+          interval: 3000,  // Auto-advance every 3 seconds
+          ride: 'carousel',
+          pause: 'hover',
+          wrap: true
+        });
+
+      } catch (error) {
+        console.error('Error loading recent images:', error);
+        console.log('Make sure to run: python3 update_recents.py');
+      }
+    }
+
+    // Load images when DOM is ready
+    document.addEventListener('DOMContentLoaded', loadRecentImages);
+  </script>
 
 </body>
 
