--- a/Talk.html
+++ b/Talk.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
+  <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Video Lectures</title>
@@ -25,71 +26,72 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 
-    <title>Video Lectures</title>
-        <style>
-        body {
-            font-family: Arial;
-            background-color: #e0dcdc;
-            margin: 1;
-            padding: 6px;
-        }
-            </style>
+  <title>Video Lectures</title>
+  <style>
+    body {
+      font-family: Arial;
+      background-color: #e0dcdc;
+      margin: 1;
+      padding: 6px;
+    }
+  </style>
 </head>
-     
+
 <body>
-     <link href="css/style.css" rel="stylesheet">
-<body>
+  <link href="assets/css/style.css" rel="stylesheet">
+
+  <body>
     <nav id="navbar_top" class="navbar navbar-expand-md bg-dark navbar-dark shadow">
-    <div class="container">
-      <a href="index.html" class="navbar-brand align-self-center">
+      <div class="container">
+        <a href="index.html" class="navbar-brand align-self-center">
         <img src="assets/img/droplet.png" class="rounded-circle" height="40">
         AMQI
       </a>
 
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-      <div class="collapse navbar-collapse" id="navmenu">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item active">
-            <a href="index.html" class="nav-link">Home</a>
-          </li>
-          <li class="nav-item">
-            <a href="group.html" class="nav-link">Group Members</a>
-          </li>
-          <li class="nav-item">
-            <a href="publication.html" class="nav-link">Publications</a>
-          </li>
-          <li class="nav-item">
-            <a href="Talk.html" class="nav-link">Talks</a>
-          </li>
-          <li class="nav-item">
-            <a href="gallery.html" class="nav-link">Gallery</a>
-          </li>
-          <li class="nav-item">
-            <a href="http://10.33.1.110/nextcloud" class="nav-link">Cloud</a>
-          </li>
-        </ul>
+        <div class="collapse navbar-collapse" id="navmenu">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item active">
+              <a href="index.html" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="group.html" class="nav-link">Group Members</a>
+            </li>
+            <li class="nav-item">
+              <a href="publication.html" class="nav-link">Publications</a>
+            </li>
+            <li class="nav-item">
+              <a href="Talk.html" class="nav-link">Talks</a>
+            </li>
+            <li class="nav-item">
+              <a href="gallery.html" class="nav-link">Gallery</a>
+            </li>
+            <li class="nav-item">
+              <a href="http://10.33.1.110/nextcloud" class="nav-link">Cloud</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
 
     <div style="height: -20px;"></div>
-      <section class="p-5 bg-intro" id="intro">
-        <div class="container">
-          <div class="h1 text-light text-center">
-            Atomic, Molecular & Quantum Information Group
-          </div>
-          <p class="h5 text-center text-light">
+    <section class="p-5 bg-intro" id="intro">
+      <div class="container">
+        <div class="h1 text-light text-center">
+          Atomic, Molecular & Quantum Information Group
+        </div>
+        <p class="h5 text-center text-light">
             Department of Physics, Indian Institute of Technology Kharagpur
           </p>
-            <div style="height: 20px;"></div>
-          <p class="h1 text-center text-light">
+        <div style="height: 20px;"></div>
+        <p class="h1 text-center text-light">
             Talks
           </p>
-        </div>
-      </section>
+      </div>
+    </section>
     <div style="height: 25px;"></div>
     <h3>PHYSICS WITH TRAPPED ATOMS, MOLECULES AND IONS</h3>
     <a href="https://www.youtube.com/watch?v=Fj5AYFDC6Lk" target="_blank">
@@ -109,48 +111,49 @@
         <p><strong>Lecture Place:</strong> IISER Kolkata</p>
     <p><strong>Date:</strong> May 26, 2023</p>
     </p>
- <footer class="bg-dark text-light pt-2">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4">
-          <div class="text-center">
+    <footer class="bg-dark text-light pt-2">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="text-center">
 
-            <h5>Contact Us</h5>
-            <p>Email: smlab.phy@gmail.com<br>
+              <h5>Contact Us</h5>
+              <p>Email: smlab.phy@gmail.com<br>
               Phone: 83808</p>
+            </div>
           </div>
-        </div>
-        <div class="col-md-4">
-          <div class="text-center">
+          <div class="col-md-4">
+            <div class="text-center">
 
-            <div class="copyright">
-              <strong><span>Atoms, Molecules & Quantum Information Group</span></strong>
-            </div>
-            <div class="credits">
-              Designed by <a> <strong>Subrata and Soumya</strong></a><br>
-              <!-- <link href="assets/img/mypic.png" rel="apple-touch-icon"> -->
-              <!-- <img src="assets/img/mypic.png" class="img-rounded" style="width: 70px;"> -->
+              <div class="copyright">
+                <strong><span>Atoms, Molecules & Quantum Information Group</span></strong>
+              </div>
+              <div class="credits">
+                Designed by <a> <strong>Subrata and Soumya</strong></a><br>
+                <!-- <link href="assets/img/mypic.png" rel="apple-touch-icon"> -->
+                <!-- <img src="assets/img/mypic.png" class="img-rounded" style="width: 70px;"> -->
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-md-4">
-          <div class="text-center">
-            <h5>Address</h5>
-            <p>Atomic and Molecular Physics Lab<br>
+          <div class="col-md-4">
+            <div class="text-center">
+              <h5>Address</h5>
+              <p>Atomic and Molecular Physics Lab<br>
               C-136,
               Department of Physics<br>
               IIT Kharagpur</p>
+            </div>
           </div>
-        </div>
 
-        <!-- <div class="col-md-4">
+          <!-- <div class="col-md-4">
           <h5>Map</h5>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d230.6814503274609!2d87.31093432894353!3d22.319500197661732!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a1d4404c5c2d88d%3A0x200987d62ee24538!2sDepartment%20Of%20Physics!5e0!3m2!1sen!2sin!4v1678198616089!5m2!1sen!2sin" width="150" height="150" frameborder="0" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
       </div>
       <hr> -->
-      </div>
+        </div>
 
-  </footer>
-</body>
+    </footer>
+  </body>
+
 </html>
