--- a/gallery.html
+++ b/gallery.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="UTF-8">
+  <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AMQI</title>
@@ -25,74 +26,77 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 
-  
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-* {
-  box-sizing: border-box;
-}
 
-body {
-  margin: 0;
-  font-family: Arial;
-} 
- header {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 1em;
-        }
-/* The grid: Four equal columns that floats next to each other */
-.column {
-  float: left;
-  width: 25%;
-  padding: 10px;
-}
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    * {
+      box-sizing: border-box;
+    }
 
-/* Style the images inside the grid */
-.column img {
-  opacity: 0.8; 
-  cursor: pointer; 
-}
+    body {
+      margin: 0;
+      font-family: Arial;
+    }
 
-.column img:hover {
-  opacity: 1;
-}
+    header {
+      background-color: #333;
+      color: white;
+      text-align: center;
+      padding: 1em;
+    }
 
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
+    /* The grid: Four equal columns that floats next to each other */
+    .column {
+      float: left;
+      width: 25%;
+      padding: 10px;
+    }
 
-/* The expanding image container */
-.container {
-  position: relative;
-  display: none;
-}
+    /* Style the images inside the grid */
+    .column img {
+      opacity: 0.8;
+      cursor: pointer;
+    }
 
-/* Expanding image text */
-#imgtext {
-  position: absolute;
-  bottom: 15px;
-  left: 15px;
-  color: white;
-  font-size: 20px;
-}
+    .column img:hover {
+      opacity: 1;
+    }
 
-/* Closable button inside the expanded image */
-.closebtn {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  color: white;
-  font-size: 35px;
-  cursor: pointer;
-}
-</style>
+    /* Clear floats after the columns */
+    .row:after {
+      content: "";
+      display: table;
+      clear: both;
+    }
+
+    /* The expanding image container */
+    .container {
+      position: relative;
+      display: none;
+    }
+
+    /* Expanding image text */
+    #imgtext {
+      position: absolute;
+      bottom: 15px;
+      left: 15px;
+      color: white;
+      font-size: 20px;
+    }
+
+    /* Closable button inside the expanded image */
+    .closebtn {
+      position: absolute;
+      top: 10px;
+      right: 15px;
+      color: white;
+      font-size: 35px;
+      cursor: pointer;
+    }
+  </style>
 </head>
-  <link href="css/style.css" rel="stylesheet">
+<link href="assets/css/style.css" rel="stylesheet">
+
 <body>
   <nav id="navbar_top" class="navbar navbar-expand-md bg-dark navbar-dark shadow">
     <div class="container">
@@ -130,133 +134,134 @@ body {
     </div>
   </nav>
 
-<header>
-<div style="text-align:center">
-  <h2>Gallery</h2>
-</div>
-    </header>
+  <header>
+    <div style="text-align:center">
+      <h2>Gallery</h2>
+    </div>
+  </header>
 
-<!-- The four columns -->
-
-<div class="row">
-  <div class="column">
-    <img src="Gallery/PRL_SM_1.jpg" alt="PRL conference 2024" style="width:100%" onclick="myFunction(this);">
-  </div>
-  <div class="column">
-    <img src="Gallery/PRL_SM_2.jpg" alt="PRL conference 2024" style="width:100%" onclick="myFunction(this);">
-  </div>
-  <div class="column">
-    <img src="Gallery/PRL_SM_3.jpg" alt="PRL conference 2024" style="width:100%" onclick="myFunction(this);">
-  </div>
-  <div class="column">
-    <img src="Gallery/PRL_SM_4.jpg" alt="PRL conference 2024" style="width:100%" onclick="myFunction(this);">
-  </div>
-</div>
+  <!-- The four columns -->
 
   <div class="row">
-  <div class="column">
-    <img src="Gallery/IIT_1.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
+    <div class="column">
+      <img src="Gallery/PRL_SM_1.jpg" alt="PRL conference 2024" style="width:100%" onclick="myFunction(this);">
+    </div>
+    <div class="column">
+      <img src="Gallery/PRL_SM_2.jpg" alt="PRL conference 2024" style="width:100%" onclick="myFunction(this);">
+    </div>
+    <div class="column">
+      <img src="Gallery/PRL_SM_3.jpg" alt="PRL conference 2024" style="width:100%" onclick="myFunction(this);">
+    </div>
+    <div class="column">
+      <img src="Gallery/PRL_SM_4.jpg" alt="PRL conference 2024" style="width:100%" onclick="myFunction(this);">
+    </div>
   </div>
-  <div class="column">
-    <img src="Gallery/IIT_2.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
-  </div>
-  <div class="column">
-    <img src="Gallery/IIT_3.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
-  </div>
-  <div class="column">
-    <img src="Gallery/workshop.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
-  </div>
-</div>
 
   <div class="row">
-  <div class="column">
-    <img src="Gallery/SM_1.JPG" alt="IIT" style="width:100%" onclick="myFunction(this);">
+    <div class="column">
+      <img src="Gallery/IIT_1.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
+    </div>
+    <div class="column">
+      <img src="Gallery/IIT_2.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
+    </div>
+    <div class="column">
+      <img src="Gallery/IIT_3.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
+    </div>
+    <div class="column">
+      <img src="Gallery/workshop.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
+    </div>
   </div>
-  <div class="column">
-    <img src="Gallery/SM_2.JPG" alt="IIT" style="width:100%" onclick="myFunction(this);">
-  </div>
-  <div class="column">
-    <img src="Gallery/SM_3.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
-  </div>
-  <div class="column">
-    <img src="Gallery/Anal.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
-  </div>
-</div>
 
   <div class="row">
-  <div class="column">
-    <img src="Gallery/Anal_arghya_subrata.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
+    <div class="column">
+      <img src="Gallery/SM_1.JPG" alt="IIT" style="width:100%" onclick="myFunction(this);">
+    </div>
+    <div class="column">
+      <img src="Gallery/SM_2.JPG" alt="IIT" style="width:100%" onclick="myFunction(this);">
+    </div>
+    <div class="column">
+      <img src="Gallery/SM_3.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
+    </div>
+    <div class="column">
+      <img src="Gallery/Anal.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
+    </div>
   </div>
-  <div class="column">
-    <img src="Gallery/Dilip_Arghya_def.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
-  </div>
-  <div class="column">
-    <img src="Gallery/sub_def.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
-  </div>
-  <div class="column">
-    <img src="Gallery/Sub_def_2.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
-  </div>
-</div>
 
-<div class="row">
-  <div class="column">
-    <img src="Gallery/rohit.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
+  <div class="row">
+    <div class="column">
+      <img src="Gallery/Anal_arghya_subrata.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
+    </div>
+    <div class="column">
+      <img src="Gallery/Dilip_Arghya_def.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
+    </div>
+    <div class="column">
+      <img src="Gallery/sub_def.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
+    </div>
+    <div class="column">
+      <img src="Gallery/Sub_def_2.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
+    </div>
   </div>
-  <div class="column">
-    <img src="Gallery/rohit_2.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
-  </div>
-  <div class="column">
-    <img src="Gallery/SSH.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
-  </div>
-  <div class="column">
-    <img src="Gallery/SM_group.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
-  </div>
-</div>
-  
-<div class="row">
-  <div class="column">
-    <img src="Gallery/sm_home_1.jpg" alt="Nature" style="width:100%" onclick="myFunction(this);">
-  </div>
-  <div class="column">
-    <img src="Gallery/subrata_japan.jpg" alt="Snow" style="width:100%" onclick="myFunction(this);">
-  </div>
-  <div class="column">
-    <img src="Gallery/soumya_conf_2.JPG" alt="Mountains" style="width:100%" onclick="myFunction(this);">
-  </div>
-  <div class="column">
-    <img src="Gallery/soumya_conf_3.JPG" alt="Lights" style="width:100%" onclick="myFunction(this);">
-  </div>
-</div>
-  
-<div class="row">
-  <div class="column">
-    <img src="Gallery/Soumya_rsday2.jpg" alt="Nature" style="width:100%" onclick="myFunction(this);">
-  </div>
-  <div class="column">
-    <img src="Gallery/rsday_1.jpg" alt="Snow" style="width:100%" onclick="myFunction(this);">
-  </div>
-  <div class="column">
-    <img src="Gallery/soumya_badhonnef.jpg" alt="Mountains" style="width:100%" onclick="myFunction(this);">
-  </div>
-  <div class="column">
-    <img src="Gallery/RSS.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
-  </div>
-</div>
-  
-<div class="container">
-  <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
-  <img id="expandedImg" style="width:100%">
-  <div id="imgtext"></div>
-</div>
 
-<script>
-function myFunction(imgs) {
-  var expandImg = document.getElementById("expandedImg");
-  var imgText = document.getElementById("imgtext");
-  expandImg.src = imgs.src;
-  imgText.innerHTML = imgs.alt;
-  expandImg.parentElement.style.display = "block";
-}
-</script>
+  <div class="row">
+    <div class="column">
+      <img src="Gallery/rohit.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
+    </div>
+    <div class="column">
+      <img src="Gallery/rohit_2.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
+    </div>
+    <div class="column">
+      <img src="Gallery/SSH.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
+    </div>
+    <div class="column">
+      <img src="Gallery/SM_group.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="column">
+      <img src="Gallery/sm_home_1.jpg" alt="Nature" style="width:100%" onclick="myFunction(this);">
+    </div>
+    <div class="column">
+      <img src="Gallery/subrata_japan.jpg" alt="Snow" style="width:100%" onclick="myFunction(this);">
+    </div>
+    <div class="column">
+      <img src="Gallery/soumya_conf_2.JPG" alt="Mountains" style="width:100%" onclick="myFunction(this);">
+    </div>
+    <div class="column">
+      <img src="Gallery/soumya_conf_3.JPG" alt="Lights" style="width:100%" onclick="myFunction(this);">
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="column">
+      <img src="Gallery/Soumya_rsday2.jpg" alt="Nature" style="width:100%" onclick="myFunction(this);">
+    </div>
+    <div class="column">
+      <img src="Gallery/rsday_1.jpg" alt="Snow" style="width:100%" onclick="myFunction(this);">
+    </div>
+    <div class="column">
+      <img src="Gallery/soumya_badhonnef.jpg" alt="Mountains" style="width:100%" onclick="myFunction(this);">
+    </div>
+    <div class="column">
+      <img src="Gallery/RSS.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
+    </div>
+  </div>
+
+  <div class="container">
+    <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
+    <img id="expandedImg" style="width:100%">
+    <div id="imgtext"></div>
+  </div>
+
+  <script>
+    function myFunction(imgs) {
+      var expandImg = document.getElementById("expandedImg");
+      var imgText = document.getElementById("imgtext");
+      expandImg.src = imgs.src;
+      imgText.innerHTML = imgs.alt;
+      expandImg.parentElement.style.display = "block";
+    }
+  </script>
 </body>
+
 </html>
