--- a/index.html
+++ b/index.html
@@ -27,122 +27,9 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 
-  <style>
-    /* Fixed aspect ratio container for carousel */
-    .carousel-container {
-      position: relative;
-      width: 100%;
-      padding-bottom: 38%;
-      /* 16:9 aspect ratio */
-      background-color: #f5f5f5;
-      overflow: hidden;
-    }
-
-    .carousel-container .carousel {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-    }
-
-    .carousel-container .carousel-inner {
-      height: 100%;
-      position: relative;
-      overflow: hidden;
-    }
-
-    .carousel-container .carousel-item {
-      height: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background-color: #f5f5f5;
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      opacity: 0;
-      transition: opacity 0.6s ease-in-out;
-    }
-
-    .carousel-container .carousel-item.active {
-      opacity: 1;
-      position: relative;
-    }
-
-    /* Fade transitions */
-    .carousel-container .carousel-item-prev,
-    .carousel-container .carousel-item-next,
-    .carousel-container .carousel-item.active.carousel-item-start,
-    .carousel-container .carousel-item.active.carousel-item-end {
-      opacity: 0;
-    }
-
-    .carousel-container .carousel-item img {
-      max-width: 100%;
-      max-height: 100%;
-      width: auto;
-      height: auto;
-      object-fit: contain;
-    }
-
-    /* Ensure carousel controls are visible and clickable */
-    .carousel-container .carousel-control-prev,
-    .carousel-container .carousel-control-next {
-      z-index: 15;
-      height: 100%;
-      width: 10%;
-      opacity: 0.8;
-    }
-
-    .carousel-container .carousel-control-prev:hover,
-    .carousel-container .carousel-control-next:hover {
-      opacity: 1;
-    }
-
-    /* Style the arrow icons */
-    .carousel-container .carousel-control-prev-icon,
-    .carousel-container .carousel-control-next-icon {
-      width: 3rem;
-      height: 3rem;
-      background-color: rgba(0, 0, 0, 0.6);
-      border-radius: 50%;
-      border: 2px solid rgba(255, 255, 255, 0.9);
-    }
-
-    .carousel-container .carousel-control-prev:hover .carousel-control-prev-icon,
-    .carousel-container .carousel-control-next:hover .carousel-control-next-icon {
-      background-color: rgba(0, 0, 0, 0.8);
-      border-color: #fff;
-    }
-
-    /* Custom styles for carousel indicators */
-    #recenthl .carousel-indicators {
-      bottom: 10px;
-      z-index: 15;
-    }
-
-    #recenthl .carousel-indicators button {
-      width: 12px;
-      height: 12px;
-      border-radius: 50%;
-      background-color: rgba(0, 0, 0, 0.7);
-      border: 2px solid rgba(255, 255, 255, 0.8);
-      margin: 0 5px;
-      cursor: pointer;
-    }
-
-    #recenthl .carousel-indicators button.active {
-      background-color: rgba(0, 0, 0, 0.9);
-      border: 2px solid rgba(255, 255, 255, 1);
-      width: 14px;
-      height: 14px;
-    }
-  </style>
 </head>
 
-<link href="css/style.css" rel="stylesheet">
+<link href="assets/css/style.css" rel="stylesheet">
 
 <body>
   <nav id="navbar_top" class="navbar navbar-expand-md bg-dark navbar-dark shadow">
@@ -322,91 +209,7 @@
 
   </footer>
 
-  <script>
-    // Function to load recent images dynamically
-    async function loadRecentImages() {
-      try {
-        // Fetch the images list from JSON file
-        const response = await fetch('recents/images.json');
-        const imageFiles = await response.json();
-
-        if (imageFiles.length === 0) {
-          console.log('No images found in recents/images.json');
-          return;
-        }
-
-        // Group by date
-        const dateGroups = {};
-        imageFiles.forEach(img => {
-          if (!dateGroups[img.date]) {
-            dateGroups[img.date] = [];
-          }
-          dateGroups[img.date].push(img);
-        });
-
-        // Get the last 10 dates
-        const recentDates = Object.keys(dateGroups).slice(0, 10);
-
-        // Generate carousel items
-        const carouselItems = document.getElementById('carouselItems');
-        const carouselIndicators = document.getElementById('carouselIndicators');
-
-        // Clear existing content
-        carouselItems.innerHTML = '';
-        carouselIndicators.innerHTML = '';
-
-        let slideIndex = 0;
-        recentDates.forEach(date => {
-          const images = dateGroups[date];
-          images.forEach(img => {
-            // Create carousel item
-            const item = document.createElement('div');
-            item.className = slideIndex === 0 ? 'carousel-item active' : 'carousel-item';
-            item.innerHTML = `<img src="recents/${img.filename}" alt="${img.name}" />`;
-            carouselItems.appendChild(item);
-
-            // Create indicator (Bootstrap 5 uses button elements)
-            const indicator = document.createElement('button');
-            indicator.type = 'button';
-            indicator.setAttribute('data-bs-target', '#recenthl');
-            indicator.setAttribute('data-bs-slide-to', slideIndex);
-            indicator.setAttribute('aria-label', `Slide ${slideIndex + 1}`);
-            if (slideIndex === 0) {
-              indicator.className = 'active';
-              indicator.setAttribute('aria-current', 'true');
-            }
-            carouselIndicators.appendChild(indicator);
-
-            slideIndex++;
-          });
-        });
-
-        console.log(`Loaded ${slideIndex} images from ${recentDates.length} recent dates`);
-
-        // Reinitialize the carousel to enable functionality
-        const carouselElement = document.getElementById('recenthl');
-        // Dispose of any existing carousel instance
-        const existingCarousel = bootstrap.Carousel.getInstance(carouselElement);
-        if (existingCarousel) {
-          existingCarousel.dispose();
-        }
-        // Create new carousel instance
-        new bootstrap.Carousel(carouselElement, {
-          interval: 3000,  // Auto-advance every 3 seconds
-          ride: 'carousel',
-          pause: 'hover',
-          wrap: true
-        });
-
-      } catch (error) {
-        console.error('Error loading recent images:', error);
-        console.log('Make sure to run: python3 update_recents.py');
-      }
-    }
-
-    // Load images when DOM is ready
-    document.addEventListener('DOMContentLoaded', loadRecentImages);
-  </script>
+  <script src="assets/js/recentUpdate.js"></script>
 
 </body>
 
