Update contact email address in index.html

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           <div class="text-center">
 
             <h5>Contact Us</h5>
-            <p>Email: smlab.phy@gmail.com<br>
+            <p>Email: sonjoym@phy.iitkgp.ac.in <br>
               Phone: 83808</p>
           </div>
         </div>
